--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -542,6 +542,8 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
             });
             model.resourceImageHeight = ko.observable("79px");
             model.startRound = function() {
+                // reset other group view
+                model.shouldShowOtherGroup(false);
                 if (model.showTour()) {
                     model.setupTour();
                 }
@@ -579,12 +581,11 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                 console.debug(formData);
                 $.post('submit-harvest-decision', formData, function(response) {
                     console.log(response);
-                    model.update($.parseJSON(response.experimentModelJson));
-                    // FIXME: forward the response message to the chat window should be handled completely on the server
-                    // side instead of ping-ponging to the client side back to the real time server back out to all
-                    // clients in this group
+                    // model.update($.parseJSON(response.experimentModelJson));
                     getWebSocket().send(createReadyEvent(response.message));
+                    model.submitted(true);
                     model.clearCurrentInterval();
+                    model.secondsLeft(0);
                 });
             }
             model.submitChatMessage = function(data, evt) {
