fixing bugs with group iteration, adding groups property to Experiment that filters based on the current session id
fixing typo in tour

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -475,7 +475,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                 tour.addStep({ element: "#dashboard-storage", title: "Storage",
                         placement: "top",
                         content: "Your total storage will be displayed here.  You must have at least " +
-                        experimentModel.costOfLiving() + " trees stored to survive each round."});
+                        model.costOfLiving() + " trees stored to survive each round."});
                 tour.addStep({ element: "#dashboard-time", title: "Time Left",
                         placement: "top",
                         content: "The time remaining in this round will be displayed here.  It will turn red when " +
