--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -15,12 +15,12 @@ function createMessageEvent(payload, event_type) {
     return JSON.stringify({
         "event_type": event_type,
         "auth_token": "{{ request.user.participant.authentication_token }}",
-        "experiment_id": {{experiment.pk}},
+        "experiment_id": {{experiment.pk|default:-1}},
         {% if participant_group_relationship %}
-            "participant_group_relationship_id": {{participant_group_relationship.pk}},
+            "participant_group_relationship_id": {{participant_group_relationship.pk|default:-1}},
         {% endif %}
         {% if participant_experiment_relationship %}
-            "participant_experiment_relationship_id": {{participant_experiment_relationship.pk}},
+            "participant_experiment_relationship_id": {{participant_experiment_relationship.pk|default:-1}},
         {% endif %}
         "message": payload
     });
