updated max resource level calculations, fixes issue 98

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -439,7 +439,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
             <select id='harvestDecisionSelect' name='harvest_decision' required="required" form="vcweb-form" data-bind='options: harvestDecisionOptions, value: harvestDecision'>
             </select>
         </div>
-        <button id='submitDecision' type='submit' class='btn btn-primary'>Submit</button>
+        <button id='submitDecisionButton' type='submit' class='btn btn-primary'>Submit</button>
         </div>
     </form>
 </div>
