--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -28,19 +28,17 @@
     </div>
 </div>
 <form id="chat-form" class='form-inline' data-bind='submit: submitChatMessage' >
-    <div class='input-prepend input-append'>
+    <div class='input-prepend input-block-level'>
         <span class='add-on'><i class='text-info icon-comment'></i></span>
-        <input id='chatMessage' type="text" placeholder="Enter a chat message">
-        <button class='btn btn-primary'>Send</button>
+        <input id='chatMessage' type="text" placeholder="Chat with your group">
     </div>
 </form>
 <div class='chat-sidebar'>
     <div id='chat-div'>
         <div class='chat-messages' data-bind='foreach: chatMessages'>
-            <i class='icon-user muted'></i> <strong>Participant <span data-bind='text: participant_number'></strong><b class='pull-right muted' data-bind='text: short_date_created'></b>
-            <p>
+            <i class='icon-user muted'></i> <strong data-bind='text: participant_number'></strong>
             <small><i class='icon-double-angle-right'></i></small> <span data-bind='text: message'></span>
-            </p>
+            <br>
         </div>
     </div>
 </div>
