--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -52,7 +52,8 @@
             <div class='row lighterprints-scoreboard'>
                 <div class='span2'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Today's Score</span>
-                        <i id='score-info' style='margin:8px 0 0 0;' rel='popover' data-trigger='hover' data-placement='top' data-content="This is your group's average score for the day.  Complete high-value challenges to rank your group up." class='pull-right icon-info-sign'></i></h5>
+                        <i id='score-info' style='margin:8px 0 0 0;' rel='popover' data-trigger='hover' data-placement='top' 
+                            data-content="This is your group's average score for the day.  Complete high-value challenges to rank your group up." class='pull-right icon-info-sign'></i></h5>
                     <table>
                         <tr>
                             <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: averagePoints'></span></td>
@@ -62,22 +63,33 @@
                 </div>
                 <div class='span2 left-divider'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Current Level</span></h5>
-                    <h1 data-bind='if: experimentCompleted'>
-                        <img class='group-level' width='120' height='70' src='{% static "images/lighterprints/experiment-completed.png"%}'>
-                    </h1>
-                    <h1 data-bind='ifnot: experimentCompleted'>
-                        <img class='group-level' width="104" height="65" data-bind="attr: { src: '{% static "images/lighterprints/rank"%}' + groupLevel() + '.png' }">
-                    </h1> 
+                    <div class='dashboard-content'>
+                        <div data-bind='if: experimentCompleted'>
+                            <img class='group-level' width='120' height='70' src='{% static "images/lighterprints/experiment-completed.png"%}'>
+                        </div>
+                        <div data-bind='ifnot: experimentCompleted'>
+                            <img class='group-level' width="104" height="65" data-bind="attr: { src: '{% static "images/lighterprints/rank"%}' + groupLevel() + '.png' }">
+                        </div> 
+                    </div>
                 </div>
                 <div class='span2 left-divider'>
-                    <h5><span class='lighterprints-scoreboard-uppercase'>Today's Progress</span></h5>
-                    <div class='lighterprints-scoreboard-xlarge'>
-                        <span data-bind='text: averagePoints'></span>/<span data-bind='text:pointsToNextLevel'></span>
+                    <h5><span class='lighterprints-scoreboard-uppercase'>Today's Progress</span>
+                        <i id='progress-info' style='padding: 0px 0px 0px 0px; margin: -1px 0px 0px -1px;' rel='popover' data-trigger='hover'
+                            data-placement='top' data-content='This chart shows the average group score needed to advance to the next level.'
+                            class='icon-info-sign'></i>
+                    </h5>
+                    <div class='chart'>
+                        <canvas id='todaysProgressChart' width="87" height="87"></canvas>
                     </div>
                 </div>
                 <div class='span2 left-divider'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Time Remaining</span></h5>
-                    <div class='lighterprints-scoreboard-xlarge'><span data-bind='text:hoursLeft'></span>:<span data-bind='text:minutesLeft'></span></div>
+                    <table>
+                        <tr>
+                            <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: hoursLeft'></span>h</td>
+                            <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: minutesLeft'></span>m</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <h3 class='underline'>Challenges</h3>
@@ -294,6 +306,7 @@
 {{ block.super }}
 <script src="//fast.fonts.com/jsapi/e86344be-530a-495b-be28-7a22a9cda219.js"></script>
 <script src='{% static "js/lighterprints/model.js" %}'></script>
+<script src='{% static "js/Chart.min.js" %}'></script>
 <script>
 $(function() {
     // XXX: set up bootstrap nav-tabs to be semi-refresh friendly, remove in production
@@ -310,6 +323,12 @@ $(function() {
     var viewModelData = $.parseJSON("{{ view_model_json|escapejs }}");
     var viewModel = new LighterFootprintsModel(viewModelData);
     // custom view model methods, some of these may be lifted into the model itself
+    var ctx = document.getElementById("todaysProgressChart").getContext("2d");
+    var data = [ 
+    { value: viewModel.averagePoints(), color: "#95CB29" }, 
+    { value: viewModel.pointsToNextLevel(), color: "#D0D0D0" },
+    ]
+    var progressChart = new Chart(ctx).Doughnut(data);
     viewModel.activateChallengesTab = activateTabFunctor('#challenges', '#lfp-navtabs');
     viewModel.activateDashboardTab = activateTabFunctor('#dashboard', '#lfp-navtabs');
     viewModel.activateHelpTab = activateTabFunctor('#help', '#lfp-navtabs');
@@ -368,7 +387,7 @@ $(function() {
     };
     ko.applyBindings(viewModel);
     // FIXME: use $('.popover').popover() if we end up having a lot more of these.
-    $('#score-info').popover();
+    $('[data-content]').popover();
 });
 </script>
 <!-- bootstrap popover templates -->
